--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -7,7 +7,14 @@
     <title>Home</title>
 </head>
 <body>
+{% load bootstrap4 %}
     <h1>Home</h1>
+
+    <div>
+    <h3><a href="signup">회원가입</a></h3>
+    <h3><a href="login">로그인</a></h3>
+    <h3><a href="logout">로그아웃</a></h3>
+    </div>
 
     <div>
         <a href="/seed/new">종자생성</a>
