--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -44,26 +44,26 @@
     <div class="input-form-backgroud row">
       <div class="input-form col-md-12 mx-auto">
         <h4 class="mb-3">로그인</h4>
-        <form class="validation-form" novalidate>
-
+        <form class="validation-form" novalidate method="POST">
+          {% csrf_token %}
           <div class="mb-3">
-            <label for="email">아이디</label>
-            <input type="email" class="form-control" id="login_id" placeholder="" required>
+            <label for="login_id">아이디</label>
+            <input type="text" class="form-control" name="login_id" placeholder="" required>
             <div class="invalid-feedback">
               아이디를 입력해주세요.
             </div>
           </div>
 
           <div class="mb-3">
-            <label for="address">비밀번호</label>
-            <input type="text" class="form-control" id="passord" placeholder="" required>
+            <label for="password">비밀번호</label>
+            <input type="password" class="form-control" name="password" placeholder="" required>
             <div class="invalid-feedback">
               비밀번호를 입력해주세요.
             </div>
           </div>
 
           <div class="mb-4"></div>
-          <button class="btn btn-primary btn-lg btn-block" type="submit">가입 완료</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" value="Login">로그인</button>
         </form>
       </div>
     </div>
