--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -44,10 +44,11 @@
     <div class="input-form-backgroud row">
       <div class="input-form col-md-12 mx-auto">
         <h4 class="mb-3">회원가입</h4>
-        <form class="validation-form" novalidate>
+        <form class="validation-form" novalidate method="POST">
+          {% csrf_token %}
           <div class="mb-3">
             <label for="name">이름</label>
-            <input type="text" class="form-control" id="name" placeholder="" value="" required>
+            <input type="text" class="form-control" name="name" placeholder="" required>
             <div class="invalid-feedback">
               이름을 입력해주세요.
             </div>
@@ -55,38 +56,38 @@
 
           <div class="mb-3">
             <label for="email">이메일</label>
-            <input type="email" class="form-control" id="email" placeholder="you@example.com" required>
+            <input type="email" class="form-control" name="email" placeholder="you@example.com" required>
             <div class="invalid-feedback">
               이메일을 입력해주세요.
             </div>
           </div>
 
           <div class="mb-3">
-            <label for="email">아이디</label>
-            <input type="email" class="form-control" id="login_id" placeholder="" required>
+            <label for="login_id">아이디</label>
+            <input type="text" class="form-control" name="login_id" placeholder="" required>
             <div class="invalid-feedback">
               아이디를 입력해주세요.
             </div>
           </div>
 
           <div class="mb-3">
-            <label for="address">소속기관</label>
-            <input type="text" class="form-control" id="organization" placeholder="" required>
+            <label for="organization">소속기관</label>
+            <input type="text" class="form-control" name="organization" placeholder="" required>
             <div class="invalid-feedback">
               소속기관을 입력해주세요.
             </div>
           </div>
 
           <div class="mb-3">
-            <label for="address">비밀번호</label>
-            <input type="text" class="form-control" id="passord" placeholder="" required>
+            <label for="password">비밀번호</label>
+            <input type="password" class="form-control" name="password" placeholder="" required>
             <div class="invalid-feedback">
               비밀번호를 입력해주세요.
             </div>
           </div>
 
           <div class="mb-4"></div>
-          <button class="btn btn-primary btn-lg btn-block" type="submit">가입 완료</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" value="Sign Up">가입 완료</button>
         </form>
       </div>
     </div>
