--- a/family/templates/new_f.html
+++ b/family/templates/new_f.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>New - Family</title>
-</head>
-<body>
-    <h1 style="text-align:center">New - Family</h1>
+{% extends "base.html" %}
+{% block content %}
+
+    {% csrf_token %}
+    <h1 style="text-align:center; margin-top: 20px ">새로운 과명 생성</h1>
     <form action="" method="POST" style="width:60%; margin: 0 auto;">
         {% csrf_token %}
         <div class="input-group mb-3">
@@ -26,5 +19,4 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-</body>
-</html>
+{% endblock content %}
