--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,20 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <!-- <div>
-    <h3><a href="signup">회원가입</a></h3>
-
-    <h3><a href="login">로그인</a></h3>
-    <h3><a href="logout">로그아웃</a></h3>
-    </div>
-
-    <div>
-        <a href="/seed/new">종자생성</a>
-        <a href="/family/new">과명생성</a>
-        <a href="/genus/new">속명생성</a>
-    </div> -->
-
-    <h3 style="text-align:center;">Seed</h3>
+    {% csrf_token %}
+    <h3 style="text-align:center; margin-top: 20px ">Seed</h3>
     <div style="display:flex;justify-content:center;">
         <table class="table table-hover" style="width:90%;">
             <thead>
