--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -12,7 +12,7 @@
 {% csrf_token %}
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/" style="color:white">Seed</a>
+      <a class="navbar-brand" href="/home" style="color:white">Seed</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,7 +29,7 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="logout" style="color:white">로그아웃</a>
+            <a class="nav-link active" aria-current="page" href="/logout" style="color:white">로그아웃</a>
           </li>
           {% else %}
           <li class="nav-item">
