--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -36,6 +36,10 @@
       -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
       box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
     }
+    .signupbtn{
+        margin-top: 10px;
+        text-align: center;
+    }
   </style>
 </head>
 
@@ -64,6 +68,10 @@
 
           <div class="mb-4"></div>
           <button class="btn btn-primary btn-lg btn-block" type="submit" value="Login">로그인</button>
+          <div class="signupbtn">
+              <a href="signup" style="color: darkgray"><U>회원가입</U></a>
+          </div>
+
         </form>
       </div>
     </div>
