--- a/genus/templates/detail_g.html
+++ b/genus/templates/detail_g.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail - Genus</title>
-</head>
-<body>
-    <h1>Detail - Genus</h1>
+{% extends "base.html" %}
+{% block content %}
+
+    <h1 style="text-align:center; margin: 20px auto;"><b>{{genus.genus_ko}}({{genus.genus_en}})</b> 상세</h1>
     {{genus.genus_ko}}
     {{genus.genus_en}}
     <a href="edit/{{genus.id}}">수정</a>
     <a href="delete/{{genus.id}}">삭제</a>
-</body>
-</html>
+
+{% endblock content %}
