--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -15,12 +15,11 @@
                 <th scope="col">종자길이(mm)</th>
                 <th scope="col">종자너비(mm)</th>
                 <th scope="col">비고</th>
-                <th scope="col">상세보기</th>
                 </tr>
             </thead>
             <tbody>
                 {% for s in seed_list %}
-                    <tr>
+                    <tr onclick="location.href='seed/detail/{{s.id}}'" style="cursor:pointer;">
                         <td>{{s.intro_num}}</td>
                         <td>{{s.family}}</td>
                         <td>{{s.genus}}</td>
@@ -30,7 +29,6 @@
                         <td>{{s.seed_length}}±{{s.seed_length_error}}</td>
                         <td>{{s.seed_width}}±{{s.seed_width_error}}</td>
                         <td>{{s.note}}</td>
-                        <td><a href="seed/detail/{{s.id}}">상세</a></td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -46,15 +44,13 @@
                     <tr>
                     <th scope="col">과명</th>
                     <th scope="col">과국명</th>
-                    <th scope="col">상세보기</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for f in family_list %}
-                        <tr>
+                        <tr onclick="location.href='family/detail/{{f.id}}'" style="cursor:pointer;">
                             <td>{{f.family_en}}</td>
                             <td>{{f.family_ko}}</td>
-                            <td><a href="/family/detail/{{f.id}}">상세</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
@@ -67,15 +63,13 @@
                     <tr>
                     <th scope="col">속명</th>
                     <th scope="col">속국명</th>
-                    <th scope="col">상세보기</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for g in genus_list %}
-                        <tr>
+                        <tr onclick="location.href='genus/detail/{{g.id}}'" style="cursor:pointer;">
                             <td>{{g.genus_en}}</td>
                             <td>{{g.genus_ko}}</td>
-                            <td><a href="/genus/detail/{{g.id}}">상세</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
