edit & detail genus, family

--- a/genus/templates/detail_g.html
+++ b/genus/templates/detail_g.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail - Genus</title>
-</head>
-<body>
-    <h1>Detail - Genus</h1>
-    {{genus.genus_ko}}
-    {{genus.genus_en}}
-    <a href="edit/{{genus.id}}">수정</a>
-    <a href="delete/{{genus.id}}">삭제</a>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+
+    {% csrf_token %}
+    <h1 style="text-align:center; margin-top: 20px ">속명 상세</h1>
+    <div style="width:60%; margin: 0 auto;">
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">한글 이름</span>
+            <input class="form-control" type="text" value={{genus.genus_ko}} readonly>
+
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">영문 이름</span>
+            <input class="form-control" type="text" value={{genus.genus_en}} readonly>
+
+        </div>
+        <div class="btn-group" role="group" >
+          <a href="edit/{{genus.id}}" class="btn btn-outline-primary">수정</a>
+          <a href="delete/{{genus.id}}" class="btn btn-outline-primary">삭제</a>
+        </div>
+
+    </div>
+
+
+{% endblock content %}
