--- a/genus/templates/edit_g.html
+++ b/genus/templates/edit_g.html
@@ -1,17 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit - Genus</title>
-</head>
-<body>
-    <h1>Edit - Genus</h1>
-    <form action="" method="POST">
+{% extends "base.html" %}
+{% block content %}
+
+    {% csrf_token %}
+    <h1 style="text-align:center; margin-top: 20px ">속명 수정</h1>
+    <form action="" method="POST" style="width:60%; margin: 0 auto;">
         {% csrf_token %}
-        {{form.as_table}}
-        <input type="submit" value="수정">
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">한글 이름</span>
+            {{form.genus_ko}}
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">영문 이름</span>
+            {{form.genus_en}}
+        </div>
+        <input type="submit" value="수정" style="float:right;" class="btn btn-primary">
     </form>
-</body>
-</html>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+{% endblock content %}
