--- a/seed/templates/detail.html
+++ b/seed/templates/detail.html
@@ -3,18 +3,50 @@
 
     <h1 style="text-align:center; margin: 20px auto;"><b>{{seed.plant_name}}({{seed.used_scientific_name}})</b> 상세</h1>
 
-    <p>{{seed.intro_num}}</p>
-    <p>{{seed.family}}</p>
-    <p>{{seed.genus}}</p>
-    <p>{{seed.used_scientific_name}}</p>
-    <p>{{seed.plant_name}}</p>
-    <p>{{seed.microscope}}</p>
-    <p>{{seed.seed_length}}</p>
-    <p>{{seed.seed_length_error}}</p>
-    <p>{{seed.seed_width}}</p>
-    <p>{{seed.seed_width_error}}</p>
-    <p>{{seed.note}}</p>
-    <a href="edit/{{seed.id}}">수정</a>
-    <a href="delete/{{seed.id}}">삭제</a>
+    <table class="table table-striped" style="display:flex;justify-content:center;">
+        <tbody>
+          <tr>
+            <th scope="row">도입번호</th>
+            <td>{{seed.intro_num}}</td>
+          </tr>
+          <tr>
+            <th scope="row">과명</th>
+            <td>{{seed.family}}</td>
+          </tr>
+          <tr>
+            <th scope="row">속명</th>
+            <td>{{seed.genus}}</td>
+          </tr>
+          <tr>
+            <th scope="row">도입학명</th>
+            <td>{{seed.used_scientific_name}}</td>
+          </tr>
+          <tr>
+            <th scope="row">국명</th>
+            <td>{{seed.plant_name}}</td>
+          </tr>
+          <tr>
+            <th scope="row">현미경</th>
+            <td>{{seed.microscope}}</td>
+          </tr>
+          <tr>
+            <th scope="row">종자길이(mm)</th>
+            <td>{{seed.seed_length}}±{{seed.seed_length_error}}</td>
+          </tr>
+          <tr>
+            <th scope="row">종자너비(mm)</th>
+            <td>{{seed.seed_width}}±{{seed.seed_width_error}}</td>
+          </tr>
+          <tr>
+            <th scope="row">비고</th>
+            <td>{{seed.note}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div style="text-align:center;">
+        <button type="button" class="btn btn-outline-primary" onclick="location.href='edit/{{seed.id}}'">수정</button>
+        <button type="button" class="btn btn-outline-danger" onclick="location.href='delete/{{seed.id}}'">삭제</button>
+      </div>
 
 {% endblock content %}
