--- a/genus/templates/detail_g.html
+++ b/genus/templates/detail_g.html
@@ -1,25 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% csrf_token %}
-    <h1 style="text-align:center; margin-top: 20px ">속명 상세</h1>
-    <div style="width:60%; margin: 0 auto;">
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">한글 이름</span>
-            <input class="form-control" type="text" value={{genus.genus_ko}} readonly>
+    <h1 style="text-align:center; margin: 20px auto;"><b>{{genus.genus_ko}}({{genus.genus_en}})</b> 상세</h1>
 
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">영문 이름</span>
-            <input class="form-control" type="text" value={{genus.genus_en}} readonly>
+    <table class="table table-striped" style="display:flex;justify-content:center;">
+        <tbody>
+        <tr>
+            <th scope="row">속명</th>
+            <td>{{genus.genus_en}}</td>
+        </tr>
+        <tr>
+            <th scope="row">속국명</th>
+            <td>{{genus.genus_ko}}</td>
+        </tr>
+        </tbody>
+    </table>
 
-        </div>
-        <div class="btn-group" role="group" >
-          <a href="edit/{{genus.id}}" class="btn btn-outline-primary">수정</a>
-          <a href="delete/{{genus.id}}" class="btn btn-outline-primary">삭제</a>
-        </div>
-
+    <div style="text-align:center;">
+        <button type="button" class="btn btn-outline-primary" onclick="location.href='edit/{{genus.id}}'">수정</button>
+        <button type="button" class="btn btn-outline-danger" onclick="location.href='delete/{{genus.id}}'">삭제</button>
     </div>
-
 
 {% endblock content %}
