--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -19,7 +19,7 @@
             </thead>
             <tbody>
                 {% for s in seed_list %}
-                    <tr onclick="location.href='seed/detail/{{s.id}}'" style="cursor:pointer;">
+                    <tr onclick="location.href='../seed/detail/{{s.id}}'" style="cursor:pointer;">
                         <td>{{s.intro_num}}</td>
                         <td>{{s.family}}</td>
                         <td>{{s.genus}}</td>
@@ -48,7 +48,7 @@
                 </thead>
                 <tbody>
                     {% for f in family_list %}
-                        <tr onclick="location.href='family/detail/{{f.id}}'" style="cursor:pointer;">
+                        <tr onclick="location.href='../family/detail/{{f.id}}'" style="cursor:pointer;">
                             <td>{{f.family_en}}</td>
                             <td>{{f.family_ko}}</td>
                         </tr>
@@ -67,7 +67,7 @@
                 </thead>
                 <tbody>
                     {% for g in genus_list %}
-                        <tr onclick="location.href='genus/detail/{{g.id}}'" style="cursor:pointer;">
+                        <tr onclick="location.href='../genus/detail/{{g.id}}'" style="cursor:pointer;">
                             <td>{{g.genus_en}}</td>
                             <td>{{g.genus_ko}}</td>
                         </tr>
