--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -39,6 +39,9 @@
             <a class="nav-link active" aria-current="page" href="login" style="color:white">로그인</a>
           </li>
           {% endif %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/search" style="color:white">검색</a>
+          </li>
         </ul>
       </div>
     </div>
