--- a/seed/templates/edit.html
+++ b/seed/templates/edit.html
@@ -57,6 +57,15 @@
             <label for="formFileMultiple" class="form-label">종자 이미지</label>
             <input class="form-control" type="file" name="image" id="formFileMultiple" multiple>
         </div>
+
+        기존에 등록된 이미지
+        {% for img in seed.images.all %}
+            <div style="margin:10px auto;">
+                <input class="form-check-input" type="checkbox" value="{{img}}" name="origin_image{{img.id}}" id="flexCheckDefault" checked>
+                <img src="/media/{{img.image}}" alt="{{img.image}}" style="margin-left:10px;width:30px;">
+                <span style="margin-left:10px;font-size:13px;color:gray;">{{img.image}}</span>
+            </div>
+        {% endfor %}
         
         <input type="submit" value="수정" style="float:right;" class="btn btn-primary">
     </form>
