--- a/seed/templates/detail.html
+++ b/seed/templates/detail.html
@@ -28,6 +28,10 @@
               <td>{{seed.plant_name}}</td>
             </tr>
             <tr>
+              <th scope="row">단/복립</th>
+              <td>{{seed.get_grain_display}}</td>
+            </tr>
+            <tr>
               <th scope="row">현미경</th>
               <td>{{seed.microscope}}</td>
             </tr>
