--- a/seed/templates/detail.html
+++ b/seed/templates/detail.html
@@ -43,10 +43,6 @@
               <th scope="row">비고</th>
               <td>{{seed.note}}</td>
             </tr>
-            <tr>
-              <th scope="row">생성자</th>
-              <td>{{seed.user.name}}</td>
-            </tr>
           </tbody>
         </table>
 
@@ -54,7 +50,10 @@
           <button type="button" class="btn btn-outline-primary" onclick="location.href='edit/{{seed.id}}'">수정</button>
           <button type="button" class="btn btn-outline-danger" onclick="location.href='delete/{{seed.id}}'">삭제</button>
         </div>
-
+        <div class="form-floating">
+            {{form.note}}
+            <label for="floatingTextarea">비고</label>
+        </div>
       </div>
 
 
