--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -48,7 +48,7 @@
                     <tr>
                     <th scope="col">과명</th>
                     <th scope="col">과국명</th>
-                    <th scope="col">셍성자</th>
+                    <th scope="col">생성자</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -69,7 +69,7 @@
                     <tr>
                     <th scope="col">속명</th>
                     <th scope="col">속국명</th>
-                    <th scope="col">셍성자</th>
+                    <th scope="col">생성자</th>
                     </tr>
                 </thead>
                 <tbody>
