--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -69,7 +69,7 @@
           <div class="mb-4"></div>
           <button class="btn btn-primary btn-lg btn-block" type="submit" value="Login">로그인</button>
           <div class="signupbtn">
-              <a href="signup" style="color: darkgray"><U>회원가입</U></a>
+              <a href="../signup" style="color: darkgray"><U>회원가입</U></a>
           </div>
 
         </form>
