--- a/family/templates/detail_f.html
+++ b/family/templates/detail_f.html
@@ -20,9 +20,15 @@
         </tbody>
     </table>
 
+    {% if user == family.user %}
     <div style="text-align:center;">
         <button type="button" class="btn btn-outline-primary" onclick="location.href='edit/{{family.id}}'">수정</button>
         <button type="button" class="btn btn-outline-danger" onclick="location.href='delete/{{family.id}}'">삭제</button>
     </div>
+    {% else %}
+        <div style="text-align:center">
+        본인이 생성한 정보만 편집할 수 있습니다.
+        </div>
+    {% endif %}
 
 {% endblock content %}
