--- a/seed/templates/detail.html
+++ b/seed/templates/detail.html
@@ -56,7 +56,7 @@
             <button type="button" class="btn btn-outline-danger" onclick="location.href='delete/{{seed.id}}'">삭제</button>
           </div>
         {% else %}
-          <div>
+          <div style="text-align:center">
             본인이 생성한 정보만 편집할 수 있습니다.
           </div>
         {% endif %}
