--- a/main/templates/result.html
+++ b/main/templates/result.html
@@ -7,15 +7,17 @@
         <table class="table table-hover" style="width:90%;">
             <thead>
                 <tr>
-                <th scope="col">도입번호</th>
-                <th scope="col">과명</th>
-                <th scope="col">속명</th>
-                <th scope="col">도입학명</th>
-                <th scope="col">국명</th>
-                <th scope="col">현미경</th>
-                <th scope="col">종자길이(mm)</th>
-                <th scope="col">종자너비(mm)</th>
-                <th scope="col">비고</th>
+                    <th scope="col">도입번호</th>
+                    <th scope="col">과명</th>
+                    <th scope="col">속명</th>
+                    <th scope="col">도입학명</th>
+                    <th scope="col">국명</th>
+                    <th scope="col">단/복립</th>
+                    <th scope="col">현미경</th>
+                    <th scope="col">종자길이(mm)</th>
+                    <th scope="col">종자너비(mm)</th>
+                    <th scope="col">비고</th>
+                    <th scope="col">생성자</th>
                 </tr>
             </thead>
             <tbody>
@@ -26,10 +28,12 @@
                         <td>{{s.genus}}</td>
                         <td>{{s.used_scientific_name}}</td>
                         <td>{{s.plant_name}}</td>
+                        <td>{{s.get_grain_display}}</td>
                         <td>{{s.microscope}}</td>
                         <td>{{s.seed_length}}±{{s.seed_length_error}}</td>
                         <td>{{s.seed_width}}±{{s.seed_width_error}}</td>
                         <td>{{s.note}}</td>
+                        <td>{{s.user.name}}</td>
                     </tr>
                 {% endfor %}
             </tbody>
